@@ -3,6 +3,7 @@
 
 7 June 2016: Wouter
 	- Fix #773: Non-standard Python location build failure with pyunbound.
+	- Improve threadsafety for openssl 0.9.8 ecdsa dnssec signatures.
 
 6 June 2016: Wouter
 	- Better help text from -h (from Ray Griffith).
